k8s/webapi/webapi-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
  namespace: linuxander
  labels:
    app: webapi-deployment
spec:
  type: NodePort
  selector:
    app: webapi-deployment
  ports:
    - port: 8000
      targetPort: 8000
